--- a/history
+++ b/history
@@ -1,1867 +1,101 @@
-ls > file
-ls
-ls > file
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; env
-ls > file 2>&- 1>&- ; lol
-ls > file 2>&- 1>&-
-ls > file 2>&-
-ls > file 2>&-
-ls > file 2>&-
-ls > file 2>&-
-ls > file
-ls
-ls > file
-ls
-ls 2>&1 1> file
-ls 2>1 1> file
-ls 2>1 1> file
-ls ewfw auteur 2>&- 1> file < file
-ls ewfw auteur 2>&- 1> file < file
-ls ewfw auteur 2>&- 1> file
-ls ewfw auteur 2>&- 1> file
-ls 2>&1 1>&-
-ls 2>&1 1>&-
-ls 2>&1
-ls
-ls auteur  > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls
-ls > file
-ls -l
-ls 
-ls > file
-ls
-ls
-ls > file
-ls
 clear
-ls
-ls
-ls
-clear
-ls 
-ls
-ls
-ls
-ls
-ls
- ls auteur wefwc 2> file
 cat file
- ls auteur wefwc 2> file
+ls -l auteur ewr 2> file 1>&-
+ls -l auteur ewr 2> file 1>> file 
+ls -l auteur ewr 2> file 1>> file 
+ls -l auteur ewr 2> file 1>> file ; cat file
+ls -l auteur ewr 2> file 1> file ; cat file
+ls -l auteur ewr 2> file ; cat file
+ls ewr 2> file ; cat file
+ls ewr 2 > file ; cat file
+ls ewr  > file ; cat file
+ls > file ; cat file
 cat file
- ls auteur wefwc > file
- ls auteur wefwc 2> file
- ls auteur wefwc
-ls auteur
+cat fi
+ls > file
+ls | rev
 ls
-cat < auteur
-cat < auteur
-ls
-cat < auteur
-cat < auteur
+ls -l ewf auteur 2>&1 1>&-
+ls -l ewf auteur 2>&1 1>&-
+ls -l ewf auteur 2>&1 1>&-
+
+ls -l ewf auteur 2>&1 1>&-
+ls -l ewf auteur 2>&- | rev
+ls -l ewf auteur 2>&- | rev
+ls -l ewf auteur 2>&- | rev
+ls -l ewf auteur 2>&- 1>&-
+ls -l ewf auteur 2>&- 1>&-
+ls -l ewf auteur 2>&- 1>&-
+ls -l ewf auteur 2>&-
+ls -l ewf auteur
+ls -l ewf 
+ls ewf 
 cat file
-ls wrgv 2>&1 | rev | cat -e > file
-ls wrgv 2>&1 | rev
-ls | rev
+cat fi
+ls -l qwer auteur > file 2>err
+ls -l qwer auteur > file 2>err
+ls -l qwer auteur > file 2>err
+ls > file
+ls ; ls
 ls
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
+clear
 ls
-ls -l > file ; echo end >> file ; cat file ; rm -rf file
-rm -rf file
+
+ls -l qwer auteur > file 2>err
+ls -l qwer auteur > file 2>err
+ls -l qwer auteur > file 2>err
 cat file
-ls > file
-cat < auteur
-cat < auteur
+ls -l qwer auteur > file
 cat file
-ls
-ls > file
-cat < auteur
-cat < auteur
-ls
-clear
-ls
-cat < auteur
-cat < auteur
-ls < auteur
-rm -rf file
+ls qwer auteur > file
 cat file
-ls weveqfv 2> file ; cat file
-ls weveqfv 2>&1 | rev
-ls | rev
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
+ls >file
 ls
-ls < auteur
-ls
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls < auteur
-ls
-ls < auteur
-ls
-ls < auteur
-ls < auteur
-ls 2>&1
-ls
+ls -l auteur  wef 1> file  2>&1 
+ls -l auteur  wef 1> file  2>&1  | rev
+ls -l auteur  wef 1> file  2>&1  | rev
+
+ls -l auteur  wef 1> file  2>&1  | rev
+ls -l auteur  wef 2>&1  | rev
+ls -l auteur  wef 2>&1  | rev
 clear
-ls
-ls < auteur
-ls < auteur
-ls < auteur
-ls
-ls erg 2>>&1 | rev
-ls erg 2>>&1
-ls
-ls erg 2>>&1
-ls erg 2>>1
-ls
+ls -l auteur  wef 2>&1  | rev
+ls -l auteur  wef  | rev
+ls -l auteur  wef 2>&1 | rev
+ls -l auteur  wef 2>&- | rev
+ls -l auteur  wef 2>&-
+ls auteur  wef 2>&-
+ls wef 2>&-
+ls -l wfqw auteur 2>&- 1> file
 clear
-ls
-rm -rf 1 12 2
-ls
-ls
-ls | rev
-ls
-exit
-ls evv 2>&1 | rev |cat -e
-cd 
-cd
-ls wcv 2>&1 | rev
-ls wcv 2>&1 
-ls wdv
-ls
-make exe
-make exe
-make exe
-make exe
-ls
 clear
-env | grep 'OLD'
-ls
-rm -rf file
-ls
-clear
-clear\
-ls | rev ; echo lol > file
-ls
-oqwrmopqw " 
-ls | revls | rev |ls | rev | ls | rev
-ls | rev |ls | rev | ls | rev
-ls | rev | ls | rev
-ls | rev | ls
-ls | rev | ls | rev | ls | rev | ls
-ls wefvewfvefvre fv re  2>&1 | rev
-ls | rev | cat -e
-ls | rev |  cat -e
-ls | rev
-ls
-ls | rev
-ls | ref
-ls | rev
-ls | rev | cat -e 
-ls | rev
-ls | re 
-ls
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | REV
-ls | rev
-ls | rev
-ls | rev | cat -e
-ls | rev
-ls | rev
-ls
-ls ; echo lol > f ; cat f ; rm -rf f
-ls
-clear
-env
-ls | rev
-ls | rev |cat -e
-ls | rev
-clear
-env | rev
-env | grep 
-ls
-env
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls
-rm -rf file
-cat file
-ls wef > file
+ls -l wfqw auteur 2>&- 1> file
+ls -l wfqw auteur 2>&-
+ls wfqw auteur 2>&-
+ls wfqw auteur
 ls wef
 ls
-rm -rf file
-cat file
-ls
-ls wef >> file
-ls wef >>
-ls wef >>&
-ls wef 2>>&
-ls wef 2>>&-
-ls wef 2>&-
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls > file
-ls
-clear
-ls
-ls -Ra
-ls -R
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev | cat | cat -e
-ls | rev | cat
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rv
-ls | cat
-ls | rev
-ls
-ls | rev | cat -e
-ls | rev
-ls | rev
-
-
-
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls ; echo lol 
-ls
-ls | rev
-ls
-ls | rev
-ls
-sl
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-echo 'lol mdr
-echo 'lol
-echo "loooooooool"
-echo "lol
-ls
-ls | rev
-rm -rf file
-cat file
-ls > file
-ls -R
-env ls
-ls
-env -i ls
-env -i ls
-env ls
-env -i ls
-env ls
-env -i ls
-env
-env ls
-env ls
-env ls
-env ;s
-env -i ls
-echo lol > file ; cat file
-cat file
-cat file
-echo lol > file
-echo lol
-echo lol > file ; cat -e file ; rm -rf file
-echo lol > file ; cat -e file ; rm -rf file
-echo lol > file ; cat -e file ; rm -rf file
-ls ; echo lol
-ls
-make save
-ls
-rm -rf GIT
-rm -rf file
-rm -rf filr
-rm -rf filr
-cat file
-ls eqrgq 2> file
-ls wrg
-ls ; echo lol 
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-clear
-ls
-ls
-rev file
-rev "lola"
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-
-
-ls | rev
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls | rev
-ls > file ; cat file ; rm -rf file
-ls > file ; cat file ; rm -rf file
-cat file
-ls > file
-cat file
-cat file
-ls > file
-cat file
-echo lol > file
-echo lol
-echo lol
-echo lol f
-cat file
-echo lol > file
-";
- .0-
-ls -R
-ls
-ls -R > file ; cat file
-cat file
-ls -R > file
-ls -R > file ; cat -e file ;  rm -rf file
-rm -rf file
-ls > file
-ls | rev
-ls | rev
-ls
-ls ; echo lol > file
-ls ; echo lol > file
-ls ; echo lol
-echo lol
-ls ; echo lol > file ; cat file ; rm -rf file
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-ls
-clear
-ls
-ls | rev
-ls
-ls | rev
-ls | rev
-env -i ls
-env
-ls
-ls | rev
-ls
-ls | rev
-ls
-env -i ls
-ls
-env -i name=lol ls
-env -i name=lol
-env -i
-ls
-ls
-env -i ls
-env -i ls
-ls ; echo lol
-ls
-env -i ls
-
-env -i
-env -i ls
-env -i
-ls
-clear
-env
-ls
-unset test
-setenv test merde ; env
-ls
-ls ; echo lol
-ls
-ls
-ls
-ls
-clear
-ls
-clear
-examshell
-ls ; echo lol 
-ls
-ls | rev
-env
-ls
-clear
-ls
-make save
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
-ls | rev
+ls -l auteur wef >file 2>&-
+ls -l auteur wef >file 2>&-
+ls -l auteur wef >file 2>&-
+ls -l auteur wef >file
+ls -l auteur wef 1>file
+ls -l auteur wef 
+ls -l auteur wef 2>&1
+ls -l auteur wef 2>&1
+ls -l auteur wef 2>&1
+ls -l auteur wef 2>&1
+ls -l auteur wef 2>&-
+ls -l auteur wef
+ls -l auteur
+ls -l auteur we 2>&1 
+ls -l auteur we 2>>&1 
+ls -l auteur we 2>>&1 | rev
+ls -l auteur we | rev
+ls -l auteur we
+ls -l auteur wef 2>&1  | rev 
+ls wef 2>&1 | rev 
+ls wef  | rev 
 ls | rev 
-ls
-s
-s
-echo $PATH
-ls ; echo lol
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls
-ls
-ls
-rev
-ls | rev
-ls | rev
-setenv test merde ; env | grep test
-setenv test merde ; env
-env
-setenv test lol
-echo lol
-ls | rev
-ls
-
-
-
-
-
-
-ls | rev
-ls
-l
-ls | rev
-ls
-ls | rev
-ls
-s
-lsl
-
-
-
-ls | rev
-ls
-ls | rev
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls | rev | rev
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-ls -l
-ls
-ls ; echo lol | rev
-ls ; echo lol
-ls
-ls
-ls > file ; cat file ; rm -rf file
-ls ; ls
-ls ;; ls
-ls ;;
-ls ;|;
-ls ;|
-ls ;;
-ls ;
-ls ;;
-ls ;;;;;;;;; ls
-;;;;;;;
-ls | rev
-ls
-ls | rev
-ls -l -a
-ls
-ls | rev | rev | cat -e
-ls | rev
-ls | rev
-ls | rev
-ls
-ls
-ls | rev
-ls -l
-ls
-ls -l | rev
-ls -l
-ls
-ls | rev
-ls
-ls | rev
-ls
-rm -rf fie
-ls
-;s
-ls > file ; cat file; rm -rf file 
-ls ; ls
-ls
-ls | rev
-ls
-ls |rev
-ls | rev
-ls
-clear
-ls | rev
-ls ; echo lol
-ls
-ls | rev
-ls |rev
-ls
-ls | rev
-ls
-ls | rev
-ls
-cat fie
-ls > fie
-ls
-ls
-ls
-ls | cat -e
-ls ; echo lol
-ls
-ls ; echo lol
-ls
-ls
-ls | cat -e
-ls
 clear
 ls
-l
-ls
-ls
-ls ; echo lol
-ls -l
-ls
-ls
-ls
-ls
-ls
-ls
-mkdir t
-ls
-ls
-ls
-echo lol
-ls
-ld
-ls
-ls
-ls
-ls
-
-
-echo lol | cat -e
-echo lol
-ls | cat -e
-ls
-ls | cat -e
-ls | cat -e
-ls | cat -e
-ls | cate -e
-ls |cat -e
-lala
-
-ss
-s
-ls | cat -e
-ls | cat -e
-cat-e
-cat-e
-ls | cat-e
-ls | cat -e
-ls |cat-e
-ls
-ls | cat -e
-ls | cat-e
-ls | cat-e
-ls
-ls | cat -e
-ls
-ls | cat -e
-ls | cat -e
-ls | cat -e
-cat file
-ls > file
-ls
-slll
-ls | rev
-cat file
-ls -lRa> file
-ls
-ls > file; cat -e file ; ls
-ls > file; cat -e file
-ls > file; cat file
-ls > file
-ls ; ls
-ls
-ls
-clear
-ls > file ; cat -e file
-l
-ls | rev
-ls
-ls
-ls
-ls
-ls
-ls 
-ls
-ls
-ls
-ls
-ls
-ls
-ls | rev | rev | cat -e
-
-ls | rev | rev | cat -e
- e
-ls | rev
-ls | rev
-ls
-
- 
-ls | rev
-ls
-ls | rev
-ls
-clear
-ls
-l
-ls | rev
-ll
-ls | rev
-ls ; ls | rev | v
-ls ; ls | rev
-ls; ls ; ls
-ls
-
-ls
-
-ls | rev | rev
-ls | rev| 
-ls | rev
-ls
-clear
-ls ; ls
-ls
-ls
-ls | rev
-ls ; ls
-ls ; ls
-ls
-ls ; ls
-ls
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | rev  |
-ls | rev  |
-
-ls | rev  |
-ls | rev
-ls |rev | rev
-ls
-ls |rev
-ls
-clear
-ls
-cat -e file
-echo lol >> file ; cat file -e
-ls > file ; cat file
-ls | rev| cat -e
-rm -rf ";"
-rm -rf "file;"
-ls
-rm -rf file;
-rm -rf file
-ls
-rm -rf cat
-cat file
-ls
-ls
- cat  file
-cat  file
-cat file
-cat file
-cat file
-cd
-ls
-cat file
-cat file
-ls > file
-ls | rev
-ls|rev
-ls |rev
-ls | rev
-ls | rev
-ls -la | rev > file ; less file
-ls -l > file ; less file
-ls > file ; less file
-ls > file 
-ls
-ls | rev
-ls | rev
-ls
-ls | rev
-ls | cat -e
-man ls
-ls
-clear
-less file
-ls > file
-ls
-echo lol | rev
-ls | rev
-ls
-ls | rev
-ls | rev
-ls | rev
-ls
-ls | rev
-ls
-clear
-ls
-ls > file ; cat file
-ls
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls
-ls | rev | rev | rev |rev
-clear
-ls | rev
-ls
-ls | rev | rev
-ls
-ls | rev
-ls
-cat file
-cat
-clear
-rm -rf ";"
-ls
-rm -rf ;
-ls
-rm -rf ";"
-clear
-ls
-echo lola | rev
-echo lol | cat -e
-echo lol | cat -e
-cat
-cat file
-ls | rev | cat -e
-ls | rev
-ls
-ls | rev
-clear
-ls
-cat file
-clear
-ls
-cat file
-cat file
-ls ; echo ; echo t > file ; cat file
-ls
-ls ; echo ; echo t > file ; cat file
-clear
-ls
-ls | rev
-ls
-clear
-ls -lRa | rev
-ls -lRa ; echo lol
-clear
-ls
-ls
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev|cat -e>file; cat file
-ls|rev | cat -e > file; cat file
-ls | rev | cat -e > file; cat file
-ls
-ls
-ls | rev | cat -e > file; cat file
-ls
-ls | rev | cat -e > file; cat file
-ls | rev | cat -e > file
-ls | rev | cat -e
-ls -l | rev ; echo lol
-cat file
-ls > file
-ls
-cat file
-ls > file
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls | cat -e
-ls
-ls
-ls | cat -e
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls | rev | cat -e | rev >file ; cat file
-ls | rev | cat -e | rev >file ; cat file
-ls | rev | cat -e | rev
-ls | rev | cat -e
-ls | rev
-ls
-ls | rev | cat -e
-ls | rev | 
-ls | rev | cat -e
-ls
-clear
-ls >> file ; cat -e file | rev 
-ls > file ; cat -e file | rev 
-ls > file ; cat -e file
-ls
-ls > file ; cat file
-rm-rf file
-ls > fiel
-ls
-s>fl
-
-
-
-
-ca i
-ls > fie
-ls
-clear
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls > file
-ls > file
-ls > file
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file ; cat file
-cat file
-ls > file
-ls
-ls
-cat file
-cat fle
-ls > file
-ls
-cat file
-ls > file
-ls
-clear
-cat file
-ls > file
-cat file
-ls > file
-ls
-ls
-ls
-ls
-ls >file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-<<<<<<< HEAD
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
-7lsls > filels> filels
-=======
-ls
-
-
-
-
-
-
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-7[C8[Ml8[C[C8[Mls8[C
-21sh
-Makefile
-auteur
-bin
-file
-history
-includes
-libft
-srcs
-test.c
-[1;32m21sh[00m:[[01;34m[04m/home/ptruffau/21sh[00m]
-7v
-cat file -e
-cat file
-echo $PWD > file ; 
-echo $PWD > file ; cat -e file
-echo $PWD > file ; cat -e file | grep "/" 
-echo $PWD > file ; cat -e file | grep "/" | rev
-echo $PWD > file ; cat -e file | grep "/"
-echo $PWD > file ; cat -e file 
-echo $PWD > file ; cat -e file | grep "/" | rev
-clear
-ls
-rm -rf "file;"
-ls
-rm -rf file
-ls
-rm -rf file;echo $PWD > file; cat -e file | grep "/" | rev
-rm -rf file;echo $PWD > file; cat -e file | grep "/" | rev
-cleqr
-ls
-ls
-ls
-rm -rf |
-ls
-ls
-rm -rf t '|'
-ls
-cat t
-ls > t
-
-
-
-
-
-
-
-
-echo "lol" > file ; cat file -e 2>&- ; cat Makefile | grep NAME | rev > t ; cat t 
-echo "lol" > file ; cat file -e 2>&- ; cat Makefile | grep NAME | rev > t ; cat t 
-echo "lol" > file ; cat file -e 2>&- 
-echo "lol" > file ; cat file -e
-echo "lol" > file ; cat file -e 2>&- 
-echo "lol" > file ; cat file -e 2>- 
-echo "lol" > file ; cat file -e 2>- | rev
-echo "lol" > file ; cat file -e
-echo "lol" > file ; cat file
-echo "lol" > file ;
-echo "lol" > file ; cat file
-echo "lol" > file ; cat -e file 
-cat file
-echo "lol" > file ; cat -e file | rev >> file
-rm -rf file
-cat file
-ls
-echo "lol" > file ; cat -e file | rev >> file
-ls
-cat file
-rm -rf file
-cat file
-echo "lol" > file ; cat -e file | rev >> file
-cat file
-echo "lol" > file ; cat -e file | rev >> file
-ls
-rm -rf 11 f file test
-ls
-clear
-cat file
-ls >> file
-cat file
-ls r 2> file
-ls >&2
-ls
-echo "lol mdr" | rev | cat -e > file
-echo "lol mdr" | rev | cat -e > f
-echo "lol mdr" | rev | cat -e > f
-cat f
-echo "lol mdr" | rev | cat -e > f
-echo "lol mdr" | rev | cat -e > f
-echo "lol mdr" | rev | cat -e > f
-echo "lol mdr" | rev | cat -e > file
-echo "lol mdr" | rev | cat -e > file
-echo "lol mdr" | rev | cat -e > file
-echo "lol mdr" | rev | cat -e > file
-ls
-clear
-ls
-cleqr
-env
-ef
-ls
-clear
-ls
-ms
-ls -lRa 
-ls
-clear
-cat file
-ls zae | rev 2> file ; cat file
-ls zae 2> file ; cat file | rev ; 
-
-ls zae 2> file ; cat file | rev ; 
-ls zae 2> file ; cat file | rev
-ls zae | rev 2> file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat filecat file
-cat file
-ls > file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file ; cat file
-ls > file
-cat file
-ls > file
-ls > file
-cat file
-ls > file
-ls > file ; cat -e file
-ls > file ; cat -e file
-ls > file ; cat -e file
-ls > file
-cat file | grep "ptruffau" | rev > file
-cat file
-ls > file
-ls > file
-ls > file
-cat file
-ls > file
-ls
-./21
-cat file
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls > file
-ls >&-
-ls &-
-ls > file
-ls > file
-
-
-
-
-
-ls > file
-
-
-
-
-ls > file
-ls
-ls > file
-ls > file
-ls > file
-ls
-
-
-ls > file
-ls > file
-
-
-ls > file
-ls
-ls
-els
-e
-
-
-
-
-l
-ls > file
-
-
-
-ls > file
-
-
-
-ls > file
-
-ls > file
-ls
-
-
-ls > file
-ls
-ls >&4
-ls >&4
-ls >&4
-ls
-ls >&0
-ls >&3
-ls >&2
-ls >&2
-ls >&2
-ls > file
-ls -la | rev >&2
-ls -la | rev >&3
-ls -la | rev >&0
-ls -la | rev >&1
-ls
-ls -la | rev > 11  
-ls -la | rev >&2  
-cat file
-ls > file
-ls
-mkdir test ; cd test ; ls -la ; ls | cate | wc -c > fifi ; cat fifi
-clear
-cat file
-ls  2> file
-ls  2>2
-ls  >&2
-ls  >&1
-ls  >&6
-ls rez >&6
-ls rez 2>&6
-ls rez 2>&-1
-ls ez 2>&-1
-ls ez 2>-1
-ls ez
-cat file
-ls > file
-ls
-cat ez
-cat /dev/null
-ls -la ezrf 2>&-1
-ls -la ezrf 2>&-1
-ls -la ezrf 2>&-1
-ls -la ezrf 2>&-1
-cat file
-ls -la ezrf 2> file
-ls -la
-ls
-rm -rf fil file
-ls
-ls | rev | rev | rev | rev > fil
-cat file
-ls | rev | rev | rev | rev > file
-ls | rev | rev | rev | rev
-ls | rev | cat -e 
-ls | rev | cat -e | rev
-ls | rev | cat -e | rev
-ls
-cat file
-cat file
-cat file | grep "ptruffau" | rev > file
-cat file | grep "ptruffau" | rev
-cat file
-ls -lRa > file
-ls > file
-ls
-clear
-ls | cat -e | rev > file ; cat -e file
-cat file
-ls | cat -e | rev > file
-ls | cat -e | rev 
-cat file
-ls | cat -e > file
-ls > file
-ls
-
-
-
-ls > file
-cat file
-ls -la > file ; cat file -e | rev > file
-ls -la > file ; cat file -e | rev 
-cat file
-
-
-ls -la > file ; cat file -e | rev > file ; cat file
-cat file -e
-ls > file
-
-cat file
-ls > file
-ls
-clear
-cat auteur
-clear
-
-echo ptruff > auteur
-cat auteur
-ls
-rm -rf fil a.out test.c
-ls
-rm -rf file
-cat file
-ls > file
-clear
-ls > file
-
-ls > file
-ls
-./21
-ls
-ls
-clear
-
-clear
-
-
-
-
-
-ls > file
-ls > file
-clear
-ls
-ls > file
-clear
-clear 
-clear 
-clear
-ls > file
-cat file
-
-
-ls > file
-clear
-ls
-ls > file
-ls
-
-
-
-
-ls > file
-
-
-
-
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file | clear ; echo lol | cat -e > file
-ls > file
-clear
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls > file
-ls < file
-ls
-ls > file
-ls
-ls > fil
-ls
-ls > file
-ls
- ls > file
-ls
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > file
-ls > fil
-ls
-ls > file
-ls > file
-ls
-ls > file
-ls > file
-ls > file
-man close
-echo lol > file
-ls > file
-ls > file
-ls > file
-ls
-ls > file
-cd
-ls
-cd
-cd 
-ls > file
-ls > file
-ls
-
-ls  > file ; cat file -e
-ls  > file ; cat file -e
-ls
-ls  > file ; cat file -e
-ls  > file ; cat file -e
-ls  > file ; cat file -e
-ls  > file ; cat file -e
-ls  > file
-ls  > file
-ls  > file
-ls er > file
-ls er 2> file
-ls er 2>&1
-ls 2>&1
-ls 2>&1
-./21
-ls 2>&1
-ls 2>1
-ls 2>
-ls &aze 2> file
-ls &aze 2> file
-ls &aze 2>&1
-ls 2>&1
-ls 2>1
-ls >&2
-ls >&2
-ls >&1
-ls > file
-ls > file
-ls > file
-lq
-ls > file
-ls > file
-ls > file
-ls
-ls > file
-ls > file
-ls > file
-ls
-man dup2
-ls
-ls > file
-ls > file
-ls
-ls
-ls
-clear
-echo lola | rev 
-echo lol
-ech jaifaim
-ls > file
-ls
-ls
-clear
-ls | cat -e | rev 
-ls <<
-ls > file
-clear
-ls
-ls <<
-ls < file
-ls > file
-clear
-ls
-ls < file
-ls < file
-ls < file
-ls >> file
-ls > file
-clear
-ls
-
-ks
-ls >
-ls << file
-ls
-ls << l
-ls >> l
-ls > l
-clear
-ls
-ls
-ls << file
-ls > file
-ls
-ls -la > file
-ls -la > file
-ls -la
-ls
-ls -la > l
-ls -la
-ls
-ls
-ls
-ls
-ls
-setenv test MERDE ; env | grep test | rev 
-setenv test MERDE ; env | grep test 
-setenv test MERDE ; env | grep test | cat -e 
-setenv test MERDE ; env | grep test | cat -e | rev
-setenv test MERDE ; env | rev | cat -e | rev
-clear
-ls
-cd ezr r
-echo lol
-ls
-setenv test merde ; env | cat -e
-setenv test merde ; env 
-ls
-ls | cat -e
-ls ; clear
-ls
-rm -rf GITED
-ls
-clear
-ls
-env ls
-env -i ls
-ls
-env -i ls
->>>>>>> 2644964041ce6d04b52664b6a899643b14287c12
-clear
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls
-ls | rev
-ls
-ls | rev
-ls
-ls > file
-ls > file
-ls > file
-ls 
-ls > file
-ls > file
-ls
-ls -l > file
-echo mdr >> file
-ls
-ls . file
-ls > file
-ls
-ls > file
-
-
-ls > file
-ls
-ls
-ls > file
-ls
-ls
-ls > file
-
-ls
-ls > file
-
-
-
-ls
-ls > file
-ls
-ls > file
-ls > file
-8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file88
-8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file88
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-cat file
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls -l > file
-
-
-
-ls
-ls > file
-
-e
-
-
-ls
-ls > file
-
-
-
-
-
-
-ls
-ls > file
-
-ls
-ls >file
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-
-
-
-ls > file
-
-
-
-ls > file
-ls
-ls > file
-ls > file
-
-
-echo lol > file
-
-
-
-ls > file
-
-
-
-
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-ls > file
-ls -la > file
-ls > file
-
-
-
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-ls > file
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-
-
-
-
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-els
-
-
-sl
-ls
-cleafr
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls . file
-ls > f
-
-
-
-ls
-ls
-ls
-ls
-ls
-ls
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls
-ls > f
-ls
-
-
-ls > f
-
-
-
-ls
-ls > f
-
-
-
-ls
-ls > file
-
-ls > file
-
-
-ls
-
-
-
-
-ls > file
-ls
-ls > file
-
-
-
-l
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-ls
-ls . f
-clear
-ls > f
-clear
-ls | rev | cat -e
-
-
-
-
-
-clear
-ls
-clear
-ls
-clear
-ls
-ls
-ls > f
-
-LS > FILE
-
-ls > file
-ls
-ls > f
-
-
-
-
-
-
-
-LS
-LS
-ls
-clear
-ls
-clear
-CLEAR
-LS
-ECHO
-ECHO LOL
-ECO LOL
-ls
-cleear
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-clear
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-ls > filw
-ls
-ls > file
-ls
-ls > file
-ls
-ls > file
-ls . file
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls > file
-ls > file
-ls > file
-\[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
-[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
-ls
-ls
-ls
-ls | rev
-88[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls | cat -e
-ls
-ls
-ls > file
-ls > file
-ls
-ls
-ls
-ls
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-clear
-ls
-8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls > file
-ls
-cd
-ls
-ls
-ls
-ls > file
-ls > file
-echo lol > file
-cat file
