--- a/history
+++ b/history
@@ -1,3 +1,105 @@
+ls ewfg 2>&1 | rev
+ls | rev 
+qrgiu || ls && ls
+clear
+qrgiu || ls && ls
+clear
+qwrgqr  || qwr   || eqvqerv
+qwrgqr  || qwr   
+qwrgqr  || ls
+qwrgqr  || ls
+qwrgqr  || ls
+qwrgqr  || ls
+qwrgqr  || ls
+qwrgqr  || ls
+ls qwef || ls || ls || efvb
+ls qwef || ls || ls
+ls qwef || ls
+ls | rev
+clear
+ls wef && echo ok
+ls && echo ok
+ls
+clear
+lsls
+wqef || ls && echo lol
+wef || l
+wef || ls
+wef || ls
+wef || ls
+wef || ls
+ls || ls
+clear
+clear
+ls ; ls || rev
+ls ;
+ls ; ls
+ls
+ls | rev
+ls
+clear
+ls -l
+ls -a
+ls
+clear
+lqrev || wef
+lqrev || wef
+lqrev || wef
+lqrev||wef
+lqrev||
+lll || ls
+lll || ls
+ls || lol
+qwdfv || ls
+qwdfv || ls
+qwdfv || ls
+ls && ls && qerve || ls
+ls && clear
+la
+qwefqwdcx
+wefq
+ls
+clear
+ls qwef  || ls
+ls cwq
+ls
+clear
+ls wqdf || ls
+ls || ls
+qverfv  ; qerv ; ls
+qverfv  ; qerv
+ls | rev
+wed
+clear
+wqvqe ; ls
+wqvqe | ls
+wqvqe && ls
+wefvqefv ; ls
+wefcw || ls
+wefcv
+wefcv
+wefcv
+sc
+ls
+wefw
+ls && env
+ls
+cat file
+ls -l ewqd auteur 2> file
+ls -l ewqd auteur 2>&1
+ls -l ewqd auteur 2>&1
+ls -l ewqd auteur 2>&1
+ls ewqd auteur 2>&1
+ls ewqd auteur 
+ls || ls
+weqf
+wefwe || ls
+clear
+ls -z || ls
+ls && ls -z
+clear
+ls || echo lol
+ls
 ls && ls || rev
 ls && ls || rev
 ls && ls
