--- a/history
+++ b/history
@@ -1,3 +1,75 @@
+ls
+clear
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\
+\
+ls < file
+ls < file
+ls < file
+ls
+clear
+cat << EOF
+cat << 
+cat < file
+cat < file
+cat < file
+cat < file
+cat < file
+cat < file
+cat < file
+ls
+clear
+ls -l auteur wefvqwr 2>&- 1> file; cat file | rev 
+ls -l auteur wefvqwr 2>&- 1> file; cat file | rev
+ls -l auteur wefvqwr 2>&- 1> file
+ls -l auteur wefvqwr 2>&- 
+ls -l auteur wefvqwr
+ls
+clear
+qsceqfq
+'qqef
+ls
+clear
+ls ewfg 2>&1 | rev
 ls ewfg 2>&1 | rev
 ls | rev 
 qrgiu || ls && ls
